re PR fortran/37253 (Segmentation fault with procedure pointer)

2008-08-28  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/37253
	* module.c (ab_attribute,attr_bits,mio_symbol_attribute): Take care of
	saving attr.procedure and attr.proc_ptr to the module file.


2008-08-28  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/37253
	* gfortran.dg/proc_ptr_10.f90: New.

From-SVN: r139713